@@ -64,7 +64,7 @@
 	{section name=aliaslist loop=$aliaslist start=$start max=$pagelimit}
 	<TR class="{cycle}{if $aliaslist[aliaslist].expdate != 0 && $aliaslist[aliaslist].expdate < $smarty.now} blend{/if}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
 		<TD class="fleft" nowrap onclick="return self.location.href='?m=aliasinfo&id={$aliaslist[aliaslist].id}';">
-			<IMG src="img/alias.gif" ALT="" > <B>{$aliaslist[aliaslist].login}@{$aliaslist[aliaslist].domain}</B>
+			<IMG src="img/alias.gif" ALT="" > <B>{if $aliaslist[aliaslist].login eq ""}{t}(domain alias){/t}&nbsp;{else}{$aliaslist[aliaslist].login}@{/if}{$aliaslist[aliaslist].domain}</B>
 		</TD>
 		<TD align="right" onclick="return self.location.href='?m=aliasinfo&id={$aliaslist[aliaslist].id}';">
 			({$aliaslist[aliaslist].id|string_format:"%04d"})
